test/fixtures/validate/bad/no-meta.js
// First statement is not `export const meta = { ... }` -> rejected.
agent("noop");
